src/test/ui/privacy/privacy-ns1.stderr
error[E0423]: expected function, tuple struct or tuple variant, found trait `Bar`
  --> $DIR/privacy-ns1.rs:20:5
   |
LL |     pub struct Baz;
   |     --------------- similarly named unit struct `Baz` defined here
...
LL |     Bar();
   |     ^^^
   |
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: consider importing this function instead
   |
LL | use foo2::Bar;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Bar` in this scope
  --> $DIR/privacy-ns1.rs:51:5
   |
LL |     pub struct Baz;
   |     --------------- similarly named unit struct `Baz` defined here
...
LL |     Bar();
   |     ^^^
   |
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: consider importing this function
   |
LL | use foo2::Bar;
   |

error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/privacy-ns1.rs:52:17
   |
LL |     pub struct Baz;
   |     --------------- similarly named struct `Baz` defined here
...
LL |     let _x: Box<Bar>;
   |                 ^^^
   |
help: a struct with a similar name exists
   |
LL |     let _x: Box<Baz>;
   |                 ^^^
help: consider importing this trait
   |
LL | use foo1::Bar;
   |

error[E0747]: constant provided when a type was expected
  --> $DIR/privacy-ns1.rs:35:17
   |
LL |     let _x: Box<Bar>;
   |                 ^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0423, E0425, E0747.
For more information about an error, try `rustc --explain E0412`.
